fixed bug where margin on small navitems is too far to the right

--- a/personal-site/src/Styles/navbar.css
+++ b/personal-site/src/Styles/navbar.css
@@ -264,8 +264,8 @@
 @media only screen and (max-height: 650px){
   .navItem{
     font-size: 3.5vh;
-    line-height: 0.7rem;
-    margin-right: -8px;
+    /* line-height: 0.7rem; */
+    /* margin-right: -8px; */
 }
   /* .navItem[active=false]{
       font-size: 0.75rem;
